--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ debugpy==1.8.2
 decorator==5.1.1
 exceptiongroup==1.2.1
 executing==2.0.1
+fastdtw==0.3.4
 filelock==3.15.4
 fonttools==4.53.1
 fsspec==2024.6.1
