--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ asttokens==2.4.1
 astunparse==1.6.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 contourpy==1.2.1
 cycler==0.12.1
@@ -43,6 +44,7 @@ mpmath==1.3.0
 namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.3
+nltk==3.9.1
 numpy==1.26.4
 opencv-python==4.10.0.84
 opt-einsum==3.3.0
@@ -67,6 +69,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 pyzmq==26.0.3
+regex==2024.9.11
 requests==2.32.3
 rich==13.7.1
 scikit-learn==1.5.1
