--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 absl-py==2.1.0
 annotated-types==0.7.0
+anyio==4.5.0
 appnope==0.1.4
+assemblyai==0.33.0
 asttokens==2.4.1
 astunparse==1.6.3
 certifi==2024.7.4
@@ -21,7 +23,10 @@ fsspec==2024.6.1
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.65.1
+h11==0.14.0
 h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.2
 idna==3.7
 ipykernel==6.29.5
 ipython==8.26.0
@@ -76,6 +81,7 @@ scikit-learn==1.5.1
 scipy==1.14.0
 seaborn==0.13.2
 six==1.16.0
+sniffio==1.3.1
 stack-data==0.6.3
 sympy==1.13.0
 tensorboard==2.17.0
@@ -95,5 +101,6 @@ ultralytics==8.2.55
 ultralytics-thop==2.0.0
 urllib3==2.2.2
 wcwidth==0.2.13
+websockets==13.0.1
 Werkzeug==3.0.3
 wrapt==1.16.0
