--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ appnope==0.1.4
 assemblyai==0.33.0
 asttokens==2.4.1
 astunparse==1.6.3
+attrs==24.2.0
 certifi==2024.7.4
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.2
@@ -30,6 +32,8 @@ httpx==0.27.2
 idna==3.7
 ipykernel==6.29.5
 ipython==8.26.0
+jax==0.4.34
+jaxlib==0.4.34
 jedi==0.19.1
 Jinja2==3.1.4
 joblib==1.4.2
@@ -44,6 +48,7 @@ MarkupSafe==2.1.5
 matplotlib==3.9.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+mediapipe==0.10.15
 ml-dtypes==0.4.0
 mpmath==1.3.0
 namex==0.0.8
@@ -51,6 +56,7 @@ nest-asyncio==1.6.0
 networkx==3.3
 nltk==3.9.1
 numpy==1.26.4
+opencv-contrib-python==4.10.0.84
 opencv-python==4.10.0.84
 opt-einsum==3.3.0
 optree==0.12.1
@@ -66,6 +72,7 @@ psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py-cpuinfo==9.0.0
+pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
@@ -82,6 +89,7 @@ scipy==1.14.0
 seaborn==0.13.2
 six==1.16.0
 sniffio==1.3.1
+sounddevice==0.5.1
 stack-data==0.6.3
 sympy==1.13.0
 tensorboard==2.17.0
