--- a/Exp/CV_Hand_Model/requirements.txt
+++ b/Exp/CV_Hand_Model/requirements.txt
@@ -1,55 +1,114 @@
 absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.5.0
+appnope==0.1.4
+assemblyai==0.33.0
 asttokens==2.4.1
+astunparse==1.6.3
 attrs==24.2.0
+certifi==2024.7.4
 cffi==1.17.1
-colorama==0.4.6
+charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
-contourpy==1.3.0
+contourpy==1.2.1
 cycler==0.12.1
-debugpy==1.8.6
+debugpy==1.8.2
 decorator==5.1.1
-exceptiongroup==1.2.2
-executing==2.1.0
+exceptiongroup==1.2.1
+executing==2.0.1
+fastdtw==0.3.4
+filelock==3.15.4
 flatbuffers==24.3.25
-fonttools==4.54.1
+fonttools==4.53.1
+fsspec==2024.6.1
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.65.1
+h11==0.14.0
+h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.2
+idna==3.7
 ipykernel==6.29.5
-ipython==8.27.0
-jax==0.4.33
-jaxlib==0.4.33
+ipython==8.26.0
+jax==0.4.34
+jaxlib==0.4.34
 jedi==0.19.1
-jupyter_client==8.6.3
+Jinja2==3.1.4
+joblib==1.4.2
+jupyter_client==8.6.2
 jupyter_core==5.7.2
-kiwisolver==1.4.7
-matplotlib==3.9.2
+keras==3.4.1
+kiwisolver==1.4.5
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.1
 matplotlib-inline==0.1.7
-mediapipe==0.10.14
-ml_dtypes==0.5.0
+mdurl==0.1.2
+mediapipe==0.10.15
+ml-dtypes==0.4.0
+mpmath==1.3.0
+namex==0.0.8
 nest-asyncio==1.6.0
-numpy==2.1.1
+networkx==3.3
+nltk==3.9.1
+numpy==1.26.4
 opencv-contrib-python==4.10.0.84
+opencv-python==4.10.0.84
 opt-einsum==3.3.0
+optree==0.12.1
 packaging==24.1
-pandas==2.2.3
+pandas==2.2.2
 parso==0.8.4
+pexpect==4.9.0
 pillow==10.4.0
-platformdirs==4.3.6
+platformdirs==4.2.2
 prompt_toolkit==3.0.47
-protobuf==4.25.5
+protobuf==4.25.4
 psutil==6.0.0
-pure_eval==0.2.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
 pycparser==2.22
+pydantic==2.8.2
+pydantic_core==2.20.1
 Pygments==2.18.0
-pyparsing==3.1.4
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-pytz==2024.2
-pywin32==306
-pyzmq==26.2.0
-scipy==1.14.1
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+regex==2024.9.11
+requests==2.32.3
+rich==13.7.1
+scikit-learn==1.5.1
+scipy==1.14.0
+seaborn==0.13.2
 six==1.16.0
-sounddevice==0.5.0
+sniffio==1.3.1
+sounddevice==0.5.1
 stack-data==0.6.3
+sympy==1.13.0
+tensorboard==2.17.0
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.4.0
+threadpoolctl==3.5.0
+torch==2.3.1
+torchvision==0.18.1
 tornado==6.4.1
+tqdm==4.66.4
 traitlets==5.14.3
 typing_extensions==4.12.2
-tzdata==2024.2
+tzdata==2024.1
+ultralytics==8.2.55
+ultralytics-thop==2.0.0
+urllib3==2.2.2
 wcwidth==0.2.13
+websockets==13.0.1
+Werkzeug==3.0.3
+wrapt==1.16.0
