--- a/requirements.txt
+++ b/requirements.txt
@@ -108,6 +108,7 @@ tzdata==2024.1
 ultralytics==8.2.55
 ultralytics-thop==2.0.0
 urllib3==2.2.2
+utils==1.0.2
 wcwidth==0.2.13
 websockets==13.0.1
 Werkzeug==3.0.3
