--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.2
+praat-parselmouth==0.4.5
 prompt_toolkit==3.0.47
 protobuf==4.25.4
 psutil==6.0.0
